--- a/kustomization/statefulset.yaml
+++ b/kustomization/statefulset.yaml
@@ -47,7 +47,7 @@ spec:
         fsGroupChangePolicy: Always
       containers:
         - name: zookeeper
-          image: docker.io/bitnami/zookeeper:${ZK_IMAGE_TAG}
+          image: docker.io/bitnami/zookeeper:3.9.2-debian-12-r12
           imagePullPolicy: "IfNotPresent"
           securityContext:
             allowPrivilegeEscalation: false
